--- a/objects.html
+++ b/objects.html
@@ -34,25 +34,26 @@
         <h3>Anomalous Items"</h3>
         <ul class="entity-list">
           <li><a href="404.html">Pale Key</a></li>
-          <li><a href="404.html">001-AA | Scalpel</a></li>
+          <li><a href="404.html">Muramasa</a></li>
+          <li><a href="404.html">Unusual Lantern</a></li>
+          <li><a href="404.html">Strange Gasmask</a></li>
+          <li><a href="404.html">Electrical Spear</a></li>
+          <li><a href="404.html">Nomad Spear</a></li>
+          <li><a href="404.html">Nomad Lantern</a></li>
         </ul>
       </div>
 
       <div class="entity-group">
-        <h3>GROUP-002 "Constructs"</h3>
+        <h3>Miscellaneous</h3>
         <ul class="entity-list">
-          <li><a href="404.html">002-A | Sprinter</a></li>
-          <li><a href="404.html">002-B | Zerg</a></li>
+          <li><a href="404.html">Wall Graffiti</a></li>
+          <li><a href="404.html">Language</a></li>
+          <li><a href="404.html">Calendar</a></li>
+          <li><a href="404.html">Parietal Art</a></li>
+          <li><a href="404.html">Gramaphone</a></li>
         </ul>
       </div>
 
-      <div class="entity-group">
-        <h3>GROUP-003 "Smilers"</h3>
-        <ul class="entity-list">
-          <li><a href="404.html">003-A | Charles</a></li>
-          <li><a href="404.html">003-B | Spiders</a></li>
-        </ul>
-      </div>
     </main>
     <footer>
       <p>© 1998 (2024) Limbo FERG HUB.</p>
