Update2 objects.html
Fixed Directory Messange

--- a/objects.html
+++ b/objects.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-      <h2>Entity Directory</h2>
+      <h2>Objects Directory</h2>
       <p>Below is a list of known objects exist in the Limbo. Select one to learn more.</p>
 
       <div class="entity-group">
@@ -51,6 +51,7 @@
           <li><a href="404.html">Calendar</a></li>
           <li><a href="404.html">Parietal Art</a></li>
           <li><a href="404.html">Gramaphone</a></li>
+          <li><a href="404.html">Typewriters</a></li>
         </ul>
       </div>
 
