--- a/objects.html
+++ b/objects.html
@@ -52,6 +52,7 @@
           <li><a href="404.html">Parietal Art</a></li>
           <li><a href="404.html">Gramaphone</a></li>
           <li><a href="404.html">Typewriters</a></li>
+          <li><a href="404.html">Elevator</a></li>
         </ul>
       </div>
 
