--- a/levels/level0.html
+++ b/levels/level0.html
@@ -28,25 +28,25 @@
         <main class="level-page">
   <div class="text-column">
     <h2>Level 0 - "The Infinite Hallways"</h2>
-    <p class="survival-class"><strong>Survival Difficulty:</strong> Class 3 — Moderately Safe | Many Resources | Entity Presence</p>
+    <p class="survival-class"><strong>Survival Difficulty:</strong> Class 3 — Moderately Safe | High amount of common Resources | Bacterium life-forms Presence</p>
 
     <section>
       <h3>Description</h3>
       <p>
         Level 0, also known as <em>"The Infinite Hallways"</em>, is the starting point and central hub of the Backrooms. It consists of endless yellow-tinted corridors featuring stained yellow wallpaper, damp carpet, and the persistent buzz of fluorescent lighting. 
-        The monotony and lack of variation cause disorientation and psychological stress.
+        This is where new survivors start first.
       </p>
       <p>
-        The level expands infinitely in all directions with similar rooms and hallways. Variants such as wall scratches, stains, and rare structural anomalies occur, but the overall layout remains eerily consistent.
+        The level structure is different and kind random, can be used for navigation.
       </p>
     </section>
 
     <section>
       <h3>Resources</h3>
       <ul>
-        <li><strong>Food:</strong> Food bars, bottled water, and various other consumables can be found.</li>
+        <li><strong>Food:</strong> Food bars, water cans, and various other consumables can be found.</li>
         <li><strong>Weapons:</strong> Monkey wrenches, knives, and spears may be located in scattered areas.</li>
-        <li><strong>Light Sources:</strong> Placeable lamps and flashlights are commonly found, useful for navigation.</li>
+        <li><strong>Light Sources:</strong> Placeables and flashlights are commonly found, useful for navigation in darkness.</li>
       </ul>
       <p>Resources are rarely clustered and typically appear at random locations.</p>
     </section>
@@ -54,8 +54,8 @@
     <section>
       <h3>Threats</h3>
       <ul>
-        <li><strong>Entities:</strong> Bacteria-based creatures roam the hallways. Especially dangerous for lone survivors.</li>
-        <li><strong>Hostile Survivors:</strong> Violent individuals may attack others near scarce resources.</li>
+        <li><strong>Entities:</strong> Bacterium creatures roam the hallways in a groups.</li>
+        <li><strong>Hostile Survivors:</strong> May attack others to get their stuff or for fun.</li>
         <li><strong>ASYNC Operatives:</strong> While usually passive, ASYNC staff may become hostile if provoked.</li>
         <li><strong>Environment:</strong> Long-term exposure to the air may be harmful due to toxic airborne elements.</li>
       </ul>
@@ -63,10 +63,10 @@
 
     <section>
       <h3>Exits</h3>
-      <p>Exits are difficult to find due to the uniform nature of the level. Known exits include:</p>
+      <p>Big amount of exits on the level. Known exits include:</p>
       <ul>
-        <li><strong>KV-31:</strong> Leads to a more industrial, hazardous environment.</li>
-        <li><strong>Level 0.1, 0.2, 0.3 and other:</strong> Accessible through elevators, doors, noclips; each features unique layouts.</li>
+        <li><strong>KV-31:</strong> Seems to be leading to frontrooms.</li>
+        <li><strong>Level 0.1, 0.2, 0.3 and other:</strong> Accessible through elevators, doors, noclips.</li>
       </ul>
     </section>
 
@@ -74,12 +74,6 @@
       <h3>Additional Notes</h3>
       <p>
         ASYNC documentation suggests Level 0 contains between 9-10 vertical floors. Exploration of vertical shafts or hidden access panels may lead to undocumented sublevels. 
-      </p>
-      <p>
-        Breathing the air for prolonged periods may lead to nausea, hallucinations, or respiratory issues due to potential contamination.
-      </p>
-      <p>
-        Survivors should avoid prolonged isolation and always travel equipped with light and water.
       </p>
     </section>
   </div>
