--- a/phenomena.html
+++ b/phenomena.html
@@ -33,6 +33,7 @@
       <div class="entity-group">
         <h3>Phenomena</h3>
         <ul class="entity-list">
+          <li><a href="404.html">Noclips</a></li>
           <li><a href="404.html">Radio Disturbance</a></li>
           <li><a href="404.html">Mannequins</a></li>
           <li><a href="404.html">Brick Moon</a></li>
