--- a/phenomena.html
+++ b/phenomena.html
@@ -34,7 +34,7 @@
         <h3>Phenomena</h3>
         <ul class="entity-list">
           <li><a href="404.html">Noclips</a></li>
-          <li><a href="404.html">Radio Disturbance</a></li>
+          <li><a href="Phenomena/radioentity.html">Radio Disturbance</a></li>
           <li><a href="404.html">Mannequins</a></li>
           <li><a href="404.html">Brick Moon</a></li>
           <li><a href="404.html">Abnormalities</a></li>
