--- a/factions/wayfarers.html
+++ b/factions/wayfarers.html
@@ -25,63 +25,8 @@
         <h2>The Wayfarers' Brotherhood</h2>
 
         <blockquote style="border-left: 4px solid #81c784; padding-left: 10px; margin: 20px 0;">
-          <em>“We walk not alone, nor for power — but for those who’ve lost their way.”</em>
+          <em>“Shimmy shimmy yay, shimmy yay.”</em>
         </blockquote>
-
-        <p>
-          The <strong>Wayfarers' Brotherhood</strong> is a decentralized yet coordinated group of survivors united not by ideology or science, but by a shared goal: to survive, adapt, and build a future inside the Backrooms.
-        </p>
-
-        <p>
-          Where <strong>/\sync Corporation</strong> brings technology, bureaucracy, and secrets, the Brotherhood brings compassion, protection, and a deep knowledge of the levels gained through hard-earned experience. These two factions now find themselves at odds, with tension mounting into skirmishes near critical access points and storage zones.
-        </p>
-
-        <section>
-          <h3>Purpose and Philosophy</h3>
-          <ul>
-            <li><strong>Survival First:</strong> The Brotherhood focuses on gathering resources, mapping levels, and sheltering wanderers.</li>
-            <li><strong>Freedom from Control:</strong> Unlike corporate factions, they believe no group should dominate or exploit others within the Backrooms.</li>
-            <li><strong>Shared Strength:</strong> Every member is encouraged to contribute — either through skills, knowledge, or effort. No one is left behind.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3>Structure</h3>
-          <p>
-            While not governed by rigid hierarchy, the Brotherhood operates through local <strong>Circles</strong> — independent camps and enclaves spread across multiple levels. Each Circle elects a <em>Pathfinder</em>, who represents their interests in wider decisions.
-          </p>
-
-          <ul>
-            <li><strong>Pathfinders:</strong> Veteran explorers who coordinate missions and represent their Circles.</li>
-            <li><strong>Keepers:</strong> Protectors of camps and supply routes.</li>
-            <li><strong>Hearthhands:</strong> Medics, cooks, and technicians who sustain the Brotherhood’s people day to day.</li>
-          </ul>
-        </section>
-
-        <section>
-          <h3>Conflict with /\sync</h3>
-          <p>
-            The Brotherhood and /\sync are increasingly at odds. While /\sync seeks to research, exploit, and perhaps even weaponize the Backrooms under the guise of control, the Wayfarers see this place as a new frontier — dangerous, yes, but also sacred in its mystery.
-          </p>
-
-          <p>
-            In multiple documented cases, /\sync agents have attempted to take over Brotherhood enclaves or claim mapped sectors as “experimental zones.” These events are slowly escalating into cold hostility.
-          </p>
-        </section>
-
-        <section>
-          <h3>Outposts and Activity</h3>
-          <p>
-            Wayfarers Brotherhood have a base in level 0 with advanced construction.
-          </p>
-        </section>
-
-        <section>
-          <h3>Final Notes</h3>
-          <blockquote style="border-left: 4px solid #81c784; padding-left: 10px; margin: 20px 0;">
-            <em>"If we are to endure, we must do so together — not through conquest, but kinship."</em>
-          </blockquote>
-        </section>
       </div>
 
       <div class="image-column">
