--- a/factions/wayfarers.html
+++ b/factions/wayfarers.html
@@ -24,7 +24,7 @@
       <div class="text-column">
         <h2>The Wayfarers' Brotherhood</h2>
 
-        <blockquote style="border-left: 4px solid #81c784; padding-left: 10px; margin: 20px 0;">
+        <blockquote style="border-left: 4px solid #7a0909; padding-left: 10px; margin: 20px 0;">
           <em>“Shimmy shimmy yay, shimmy yay.”</em>
         </blockquote>
       </div>
