--- a/entities.html
+++ b/entities.html
@@ -96,7 +96,7 @@
       <div class="entity-group">
         <h3>GROUP-006 "Crinitus Cimex"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">006-A | Blunky</a></li>
+          <li><a href="404.html">006-A | Blanky</a></li>
           <li><a href="404.html">006-B | Tanky</a></li>
         </ul>
       </div>
