--- a/entities.html
+++ b/entities.html
@@ -104,7 +104,7 @@
       <div class="entity-group">
         <h3>GROUP-XXX "Uncategorized"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">XXX-A | Butcher</a></li>
+          <li><a href="entities/butcher.html">XXX-A | Butcher</a></li>
         </ul>
       </div>
 
