--- a/entities/butcher.html
+++ b/entities/butcher.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Btucher - Creature Description</title>
+  <link rel="stylesheet" href="../styles/main.css" />
+  <style>
+    .creature-description {
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+    }
+    .creature-image {
+      margin-left: 20px;
+      max-width: 300px;
+      max-height: 300px;
+      object-fit: cover;
+    }
+    .creature-info {
+      flex-grow: 1;
+    }
+  </style>
+</head>
+<body>
 
+    <div class="top-gif">
+      <img src="../assets/gifs/HUB_logo.gif" alt="Logo Animation" />
+  </div>
+
+  <div class="container">
+    <header>
+      <h1>Limbo HUB</h1>
+      <nav>
+        <a href="../index.html">Home</a>
+        <a href="../levels.html">Levels</a>
+        <a href="../entities.html">Entities</a>
+        <a href="../factions.html">Factions</a>
+        <a href="../objects.html">Objects</a>
+        <a href="../phenomena.html">Phenomena and anomalies</a>
+      </nav>
+    </header>
+
+    <main>
+      <h2>Dissector</h2>
+      <div class="creature-description">
+        <div class="creature-info">
+          <p><strong>Community Nicknames:</strong> Dissector, Hammerhead</p>
+          <p><strong>Danger Level:</strong> High</p>
+
+          <h3>Description</h3>
+          <p>The Dissector is a humanoid-like entity with twisted, wire-like limbs and varying head shapes. It is characterized by scythe-like appendages used for swift, devastating slashes. Despite its human-like body structure, it moves and attacks with mechanical precision, making it extremely dangerous.</p>
+
+          <h3>Behavior</h3>
+          <p>Dissectors are highly hostile and engage immediately upon sight. Their movements are quick and calculated, often employing hit-and-run tactics. However, they will disengage if they lose sight of their target, making them unpredictable.</p>
+
+          <h3>Countermeasures</h3>
+          <ul>
+            <li>Hide in the shadows to avoid detection.</li>
+            <li>Use confined spaces to limit its movement.</li>
+            <li>Take sharp turns to confuse and outrun it.</li>
+            <li>Coordinate with others to flank and attack simultaneously.</li>
+            <li>Wait for it to make an attack and then escape during the brief pause.</li>
+          </ul>
+
+          <h3>Moveset</h3>
+          <ul>
+            <li><strong>Slash:</strong> A fast, sharp attack dealing significant damage. Can kill an unarmored survivor in just a few hits.</li>
+            <li><strong>Lunge:</strong> A sudden leap forward, attacking with both scythe-like appendages.</li>
+            <li><strong>Crouch:</strong> Can crouch to fit through smaller spaces, but unable to attack while in this position.</li>
+          </ul>
+
+          <h3>Statistics</h3>
+          <ul>
+            <li><strong>Lethality:</strong> 33-70 damage per attack, depending on the move.</li>
+            <li><strong>Mobility:</strong> Faster than the average survivor.</li>
+            <li><strong>Vitality:</strong> Moderate health, can withstand several hits before going down.</li>
+          </ul>
+
+          <h3>Locations</h3>
+          <p>Primarily found on Level 0 and areas with higher bacterial activity, such as the Nest.</p>
+
+          <h3>Notes</h3>
+          <p>Death Message: "Evolved Lifeform" — There are four known variants, each with different head shapes and intelligence levels.</p>
+        </div>
+        <img src="../assets/images/dissector.jpg" alt="Dissector" class="creature-image" />
+      </div>
+    </main>
+
+    <footer>
+      <p>© 1998 (2024) Limbo FERG HUB.</p>
+      <p>This is an unofficial fan wiki for Backrooms: Limbo. We are not affiliated with the developers of the game. All rights belong to their respective owners.<p></p>
+    </footer>
+  </div>
+</body>
+</html>
