--- a/entities/butcher.html
+++ b/entities/butcher.html
@@ -45,11 +45,11 @@
       <h2>Dissector</h2>
       <div class="creature-description">
         <div class="creature-info">
-          <p><strong>Community Nicknames:</strong> Dissector, Hammerhead</p>
+          <p><strong>Community Nicknames:</strong> Butcher</p>
           <p><strong>Danger Level:</strong> High</p>
 
           <h3>Description</h3>
-          <p>The Dissector is a humanoid-like entity with twisted, wire-like limbs and varying head shapes. It is characterized by scythe-like appendages used for swift, devastating slashes. Despite its human-like body structure, it moves and attacks with mechanical precision, making it extremely dangerous.</p>
+          <p>The Butcher is a formidable and terrifying entity, distinguished by its menacing appearance and relentless pursuit of survivors. It is clad in a large, well-fitted jacket that comes in a range of colors—blue, green, or red. In one hand, The Butcher wields its signature weapon: a massive bloodstained sword, known as Muramasa, wrapped in ominous black cables. In its other hand, or sometimes at its hip, The Butcher carries a large lantern, which it also uses as a brutal melee weapon. Its sinister laugh echoes in the Backrooms whenever it corners or surprises a target, making encounters with this entity deeply unnerving.</p>
 
           <h3>Behavior</h3>
           <p>Dissectors are highly hostile and engage immediately upon sight. Their movements are quick and calculated, often employing hit-and-run tactics. However, they will disengage if they lose sight of their target, making them unpredictable.</p>
@@ -81,7 +81,7 @@
           <p>Primarily found on Level 0 and areas with higher bacterial activity, such as the Nest.</p>
 
           <h3>Notes</h3>
-          <p>Death Message: "Evolved Lifeform" — There are four known variants, each with different head shapes and intelligence levels.</p>
+          <p>Death Message: "TBC" — TBC.</p>
         </div>
         <img src="../assets/images/dissector.jpg" alt="Dissector" class="creature-image" />
       </div>
