--- a/entities/butcher.html
+++ b/entities/butcher.html
@@ -2,30 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Btucher - Creature Description</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>The Butcher - Entity File</title>
   <link rel="stylesheet" href="../styles/main.css" />
   <style>
-    .creature-description {
+    .entity-description {
       display: flex;
       flex-direction: row;
       align-items: flex-start;
+      margin-top: 20px;
     }
-    .creature-image {
+
+    .entity-image {
       margin-left: 20px;
       max-width: 300px;
-      max-height: 300px;
+      max-height: 400px;
       object-fit: cover;
     }
-    .creature-info {
+
+    .entity-info {
       flex-grow: 1;
     }
   </style>
 </head>
 <body>
 
-    <div class="top-gif">
-      <img src="../assets/gifs/HUB_logo.gif" alt="Logo Animation" />
+  <div class="top-gif">
+    <img src="../assets/gifs/HUB_logo.gif" alt="Logo Animation" />
   </div>
 
   <div class="container">
@@ -42,54 +45,64 @@
     </header>
 
     <main>
-      <h2>Dissector</h2>
-      <div class="creature-description">
-        <div class="creature-info">
-          <p><strong>Community Nicknames:</strong> Butcher</p>
-          <p><strong>Danger Level:</strong> High</p>
+      <h2>The Butcher</h2>
+      <p><strong>Community Nickname:</strong> The Butcher</p>
 
+      <div class="entity-description">
+        <div class="entity-info">
           <h3>Description</h3>
-          <p>The Butcher is a formidable and terrifying entity, distinguished by its menacing appearance and relentless pursuit of survivors. It is clad in a large, well-fitted jacket that comes in a range of colors—blue, green, or red. In one hand, The Butcher wields its signature weapon: a massive bloodstained sword, known as Muramasa, wrapped in ominous black cables. In its other hand, or sometimes at its hip, The Butcher carries a large lantern, which it also uses as a brutal melee weapon. Its sinister laugh echoes in the Backrooms whenever it corners or surprises a target, making encounters with this entity deeply unnerving.</p>
+          <p>The Butcher is a formidable and terrifying entity, distinguished by its menacing appearance and relentless pursuit of survivors. It wears a large, well-fitted jacket in varying colors—blue, green, or red. In one hand it wields a massive, bloodstained sword named <strong>Muramasa</strong>, wrapped in ominous black cables. In the other hand, or sometimes at its hip, it carries a heavy lantern, which also doubles as a brutal melee weapon. Survivors often report hearing its sinister laughter echoing through the halls just before it strikes.</p>
 
           <h3>Behavior</h3>
-          <p>Dissectors are highly hostile and engage immediately upon sight. Their movements are quick and calculated, often employing hit-and-run tactics. However, they will disengage if they lose sight of their target, making them unpredictable.</p>
+          <p>The Butcher is sadistic and cruel, often taunting its victims before finishing them off. It enjoys fear and panic, laughing loudly when catching someone off guard. It moves with frightening speed despite its size, making escape almost impossible in open levels such as the <strong>Brutalist Level</strong>.</p>
+
+          <h3>Weapon – Muramasa</h3>
+          <p>Muramasa is a massive sword that The Butcher uses with great skill. It possesses a horrifying trait — it restores The Butcher’s health each time it kills a player or another entity. This makes The Butcher nearly impossible to kill if allowed to go on a rampage. The sword is unnaturally light for its size, enhancing its lethality.</p>
+
+          <h3>Combat Encounters</h3>
+          <p>The Butcher can be killed, but doing so is extremely difficult. Poorly planned attacks may only help it regain strength. Survivors must work in a highly coordinated group and prevent it from scoring kills, or else it may become stronger mid-battle. Entire ASYNC teams have reportedly been wiped out in single encounters. The best escape method is through noclipping, though this is not always possible.</p>
+
+          <h3>Abilities</h3>
+          <ul>
+            <li><strong>Sword Mastery (Muramasa):</strong> Skilled and fast attacks; heals on kill.</li>
+            <li><strong>Relentless Pursuit:</strong> Chases targets with unyielding determination.</li>
+            <li><strong>Mocking Laughter:</strong> Instills fear; can disorient survivors during chases.</li>
+            <li><strong>Lantern Bludgeon:</strong> Secondary weapon; can deliver devastating melee blows.</li>
+          </ul>
 
           <h3>Countermeasures</h3>
           <ul>
-            <li>Hide in the shadows to avoid detection.</li>
-            <li>Use confined spaces to limit its movement.</li>
-            <li>Take sharp turns to confuse and outrun it.</li>
-            <li>Coordinate with others to flank and attack simultaneously.</li>
-            <li>Wait for it to make an attack and then escape during the brief pause.</li>
-          </ul>
-
-          <h3>Moveset</h3>
-          <ul>
-            <li><strong>Slash:</strong> A fast, sharp attack dealing significant damage. Can kill an unarmored survivor in just a few hits.</li>
-            <li><strong>Lunge:</strong> A sudden leap forward, attacking with both scythe-like appendages.</li>
-            <li><strong>Crouch:</strong> Can crouch to fit through smaller spaces, but unable to attack while in this position.</li>
+            <li><strong>Noclip Escape:</strong> Most effective method of avoiding death.</li>
+            <li><strong>Avoid Open Levels:</strong> Don’t engage it in areas with no cover or escape routes.</li>
+            <li><strong>Coordinated Assault:</strong> Only way to kill it reliably. Avoid casualties that could trigger its healing.</li>
           </ul>
 
           <h3>Statistics</h3>
           <ul>
-            <li><strong>Lethality:</strong> 33-70 damage per attack, depending on the move.</li>
-            <li><strong>Mobility:</strong> Faster than the average survivor.</li>
-            <li><strong>Vitality:</strong> Moderate health, can withstand several hits before going down.</li>
+            <li><strong>Lethality:</strong> Extremely High</li>
+            <li><strong>Mobility:</strong> Fast and relentless</li>
+            <li><strong>Vitality:</strong> High (regenerates from kills)</li>
           </ul>
 
-          <h3>Locations</h3>
-          <p>Primarily found on Level 0 and areas with higher bacterial activity, such as the Nest.</p>
+          <h3>Known Locations</h3>
+          <ul>
+            <li><strong>Level 0:</strong> Rare sightings</li>
+            <li><strong>Brutalist Level:</strong> Frequent and dangerous encounters</li>
+          </ul>
 
           <h3>Notes</h3>
-          <p>Death Message: "TBC" — TBC.</p>
+          <ul>
+            <li><strong>Muramasa’s Healing:</strong> Each kill restores The Butcher’s health. Prevent this at all costs.</li>
+            <li><strong>Death Message:</strong> TBA</li>
+          </ul>
         </div>
-        <img src="../assets/images/dissector.jpg" alt="Dissector" class="creature-image" />
+        <img src="../assets/images/butcher.png" alt="The Butcher" class="entity-image" />
       </div>
     </main>
 
     <footer>
       <p>© 1998 (2024) Limbo FERG HUB.</p>
-      <p>This is an unofficial fan wiki for Backrooms: Limbo. We are not affiliated with the developers of the game. All rights belong to their respective owners.<p></p>
+      <p>This is an unofficial fan wiki for Backrooms: Limbo. We are not affiliated with the developers of the game. All rights belong to their respective owners.</p>
     </footer>
   </div>
 </body>
