--- a/entities/butcher.html
+++ b/entities/butcher.html
@@ -86,8 +86,9 @@
 
           <h3>Known Locations</h3>
           <ul>
-            <li><strong>Level 0:</strong> Rare sightings</li>
+            <li><strong>Level 0 Sub-Regions:</strong> Extremely Rare sightings. There has only been 1 report on a Butcher being in Motel Depot.</li>
             <li><strong>Brutalist Level:</strong> Frequent and dangerous encounters</li>
+            <li><strong>Brick Level:</strong> Frequent and dangerous encounters</li>
           </ul>
 
           <h3>Notes</h3>
