--- a/levels.html
+++ b/levels.html
@@ -38,15 +38,9 @@
               <li><a href="404.html">Level-0.1 | "Motel Depot"</a></li>
               <li><a href="404.html">Level-0.2A | "Bluerooms"</a></li>
               <li><a href="404.html">Level-0.2B | "Gallery"</a></li>
-              <li><a href="404.html">Level-0.3 | "Nomad Shelter"</a></li>
-              <li><a href="404.html">Level-0.4A | "Decrement Abnormality (Upper)"</a></li> 
-              <li><a href="404.html">Level-0.4B | "Decrement Abnormality (Lower)"</a></li> 
-              <li><a href="404.html">Level-0.5 | "Attic"</a></li> 
-              <li><a href="404.html">Level-0.6 | "Grandma's House"</a></li> 
-              <li><a href="404.html">Level-0.7 | "Paranoia"</a></li>
-              <li><a href="404.html">Level-0.8 | "Spire"</a></li>
-              <li><a href="404.html">Level-0.9 | "Sandusky"</a></li>
-              <li><a href="404.html">Level-0.10 | "Shopping Mall"</a></li>
+              <li><a href="404.html">Level-0.3A | "Decrement Abnormality (Upper)"</a></li> 
+              <li><a href="404.html">Level-0.3B | "Decrement Abnormality (Lower)"</a></li> 
+              <li><a href="404.html">Level-0.4 | "Sandusky"</a></li>
               <li><a href="404.html">Level-H | "Hallways"</a></li>
             </ul>
           </li>
@@ -77,6 +71,20 @@
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
           <li><a href="404.html">Level-???.1 | "Olympus"</a></li>
+        </ul>
+      </div>
+    </main>
+
+      <div class="level-category">
+        <h3>Areas and Locations</h3>
+        <ul class="level-list">
+          <li><a href="404.html">Level-0.A | "Nomad Shelter"</a></li>
+          <li><a href="404.html">Level-0.B | "Attic"</a></li> 
+          <li><a href="404.html">Level-0.C | "Grandma's House"</a></li> 
+          <li><a href="404.html">Level-0.D | "Paranoia"</a></li>
+          <li><a href="404.html">Level-0.E | "Spire"</a></li>
+          <li><a href="404.html">Level-0.F | "Shopping Mall"</a></li>
+          
         </ul>
       </div>
     </main>
