Added palekey link in objects.html

--- a/objects.html
+++ b/objects.html
@@ -33,7 +33,7 @@
       <div class="entity-group">
         <h3>Anomalous Items"</h3>
         <ul class="entity-list">
-          <li><a href="404.html">Pale Key</a></li>
+          <li><a href="objects/palekey.html">Pale Key</a></li>
           <li><a href="404.html">Muramasa</a></li>
           <li><a href="404.html">Unusual Lantern</a></li>
           <li><a href="404.html">Strange Gasmask</a></li>
