--- a/objects.html
+++ b/objects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Entities - Limbo HUB</title>
+  <title>Objects - Limbo HUB</title>
   <link rel="stylesheet" href="styles/main.css" />
   <script src="scripts/modal.js" defer></script>
 </head>
