--- a/factions.html
+++ b/factions.html
@@ -31,7 +31,7 @@
       <p>Below is a list of known factions operating within the Limbo. Select one to learn more.</p>
 
       <div class="faction-group">
-        <h3>Major Factions</h3>
+        <h3>Offical Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/async.html">ASYNC</a></li>
           <li><a href="404.html">Wayfarers Brotherhood (WB)</a></li>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="faction-group">
-        <h3>Half-Official Factions</h3>
+        <h3>Semi-Official Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/confer.html">Confer Entente</a></li>
           <li><a href="404.html">[FILE MISSING]</a></li>
@@ -49,7 +49,7 @@
       </div>
 
       <div class="faction-group">
-        <h3>Non-Officia Factions</h3>
+        <h3>Non-Official Factions</h3>
         <ul class="faction-list">
           <li><a href="factions/ferg.html">FERG - Free Explorers</a></li>
           <li><a href="404.html">Major Explorer Group (MEG)</a></li>
