--- a/entities.html
+++ b/entities.html
@@ -35,7 +35,7 @@
         <ul class="entity-list">
           <li><a href="entities/dissector.html">001-A | Dissector</a></li>
           <li><a href="entities/scalpel.html">001-AA | Scalpel</a></li>
-          <li><a href="404.html">001-AB | Shiv</a></li>
+          <li><a href="entities/shiv.html">001-AB | Shiv</a></li>
           <li><a href="entities/spotlight.html">001-B | Witnesses</a></li>
           <li><a href="404.html">001-BA | Junior Floodlight</a></li>
           <li><a href="404.html">001-C | Pipehead</a></li>
