--- a/entities/shiv.html
+++ b/entities/shiv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Butcher - Entity File</title>
+  <title>The Shiv - Entity File</title>
   <link rel="stylesheet" href="../styles/main.css" />
   <style>
     .entity-description {
@@ -55,12 +55,8 @@
 
           <h3>Behavior</h3>
           <p>TBC<strong>Level 0</strong>.</p>
-
-          <h3>Weapon – Muramasa</h3>
-          <p>Muramasa is a massive sword that The Butcher uses with great skill. It possesses a horrifying trait — it restores The Butcher’s health each time it kills a player or another entity. This makes The Butcher nearly impossible to kill if allowed to go on a rampage. The sword is unnaturally light for its size, enhancing its lethality.</p>
-
           <h3>Combat Encounters</h3>
-          <p>The Butcher can be killed, but doing so is extremely difficult. Poorly planned attacks may only help it regain strength. Survivors must work in a highly coordinated group and prevent it from scoring kills, or else it may become stronger mid-battle. Entire ASYNC teams have reportedly been wiped out in single encounters. The best escape method is through noclipping, though this is not always possible.</p>
+          <p>TBC</p>
 
           <h3>Abilities</h3>
           <ul>
