--- a/entities/shiv.html
+++ b/entities/shiv.html
@@ -92,7 +92,7 @@
             <li>Can turn its floodlight-head to look around corners and upwards. Stay out of elevated or narrow view corridors.</li>
           </ul>
         </div>
-        <img src="../assets/images/spotlight.png" alt="Spotlight Entity" class="creature-image" />
+        <img src="../assets/images/shiv.png" alt="Shiv Entity" class="creature-image" />
       </div>
     </main>
 
