--- a/entities/shiv.html
+++ b/entities/shiv.html
@@ -50,46 +50,41 @@
 
           <h3>Description</h3>
           <p>TBC</p>
-          <p>Spotlights are slow and cumbersome due to their size, but their persistent floodlights and long reach make them formidable when encountered in open spaces. Their most dangerous trait isn't necessarily their physical strength, but their ability to expose players to other entities, making hiding in darkness ineffective.</p>
+          <p>TBC</p>
 
           <h3>Behavior</h3>
-          <p>Spotlights are commonly found patrolling dark areas, scanning the environment with their bright beams for any signs of players. Upon detecting a player, they will pause for a moment before beginning their pursuit, giving survivors a brief window to flee. If a player escapes their sight, Spotlights will check the surrounding areas methodically before moving on if they find no further trace.</p>
-          <p>Their ability to hear is hampered by the constant humming of their floodlights, meaning that survivors can often walk or even run out of their direct path without being detected. Their heavy, loud footsteps and the distinct humming sound give players an early warning of their presence.</p>
+          <p>TBC</p>
+          <p>TBC</p>
 
           <h3>Countermeasures</h3>
           <ul>
-            <li>Hide at a distance and avoid staying in its direct light cone.</li>
-            <li>Use small corridors and doors to force it to crouch and slow down.</li>
-            <li>Move behind or sideways during strikes to avoid damage.</li>
-            <li>Exploit its poor hearing to sneak or run away undetected.</li>
-            <li>Coordinate with others to flank it while it’s distracted.</li>
-            <li>Listen for humming and footsteps to determine approach or departure.</li>
+            <li>TBC</li>
           </ul>
 
           <h3>Moveset</h3>
           <ul>
-            <li><strong>Strike:</strong> Slow but powerful hit from floodlight arm (50 damage unarmored).</li>
-            <li><strong>Crouch:</strong> Can enter smaller spaces, but moves significantly slower while crouching.</li>
+            <li><strong>Strike:</strong> TBC</li>
+            <li><strong>Crouch:</strong> TBC</li>
           </ul>
 
           <h3>Statistics</h3>
           <ul>
-            <li><strong>Lethality:</strong> 40–60 damage per hit. Avoidable, but light exposure draws others.</li>
-            <li><strong>Mobility:</strong> Slower than players. Cannot sprint, but has infinite stamina.</li>
-            <li><strong>Vitality:</strong> High health. Takes 14+ hits with low-tier weapons to kill. Best attacked in groups.</li>
+            <li><strong>Lethality:</strong> TBC</li>
+            <li><strong>Mobility:</strong> TBC</li>
+            <li><strong>Vitality:</strong> TBC</li>
           </ul>
 
           <h3>Locations</h3>
           <ul>
-            <li>Common on Level 0</li>
-            <li>Frequently seen near the Nest and the Moshpit</li>
+            <li>Level 0</li>
+            <li>TBC</li>
           </ul>
 
           <h3>Notes</h3>
           <ul>
-            <li><strong>Death Message:</strong> "Evolved Lifeform"</li>
-            <li>Floodlights can be salvaged after death by interacting with bacterial wiring.</li>
-            <li>Can turn its floodlight-head to look around corners and upwards. Stay out of elevated or narrow view corridors.</li>
+            <li><strong>Death Message:</strong> "n"</li>
+            <li>n</li>
+            <li>n</li>
           </ul>
         </div>
         <img src="../assets/images/shiv.png" alt="Shiv Entity" class="creature-image" />
