--- a/levels.html
+++ b/levels.html
@@ -45,7 +45,7 @@
             </ul>
           </li>
           <li>
-            <a href="level/level1.html">Level-1 | "The Parking Garage"</a>
+            <a href="levels/level1.html">Level-1 | "The Parking Garage"</a>
             <ul class="sublevel-list">
               <li><a href="404.html">Level-1.1 | [DATA MISSING]</a></li>
               <li><a href="404.html">Level-1.2 | [DATA MISSING]</a></li>
