--- a/levels.html
+++ b/levels.html
@@ -58,7 +58,7 @@
           <li><a href="404.html">Level-11 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-22 | [DATA MISSING]</a></li>
           <li><a href="404.html">Level-363 | "INFORMATION OMITTED"</a></li>
-          <li><a href="404.html">Level-601 | "The End"</a></li>
+          <li><a href="levels/level601.html">Level-601 | "The End"</a></li>
         </ul>
       </div>
 
