Made minor changes to date radioentity.html

--- a/Phenomena/radioentity.html
+++ b/Phenomena/radioentity.html
@@ -82,7 +82,7 @@
           </ul>
 
           <h3>Visual Evidence</h3>
-          <p>The following image was reconstructed from binary code received during a broadcast on November 10th, 2024.</p>
+          <p>The following image was reconstructed from binary code received during a broadcast on November 10th, 1998 (2024)</p>
           <div class="image-column">
     <img src="../assets/images/radio_entity.png" alt="Level 0 Image" class="level-image"/>
   </div>
@@ -95,3 +95,4 @@
   </div>
 </body>
 </html>
+
