--- a/levels/level601.html
+++ b/levels/level601.html
@@ -43,9 +43,7 @@
     <section>
       <h3>Resources</h3>
       <ul>
-        <li><strong>Food:</strong> No Food is found here</li>
-        <li><strong>Weapons:</strong> Galives can be found around the level on furniture</li>
-        <li><strong>Light Sources:</strong> No Light Sources can be found here</li>
+        <li>Only glaives can be found have, hardtracks doccumented to be found here too.</li>
       </ul>
       <p>TBC</p>
     </section>
@@ -54,7 +52,6 @@
       <h3>Threats</h3>
       <ul>
         <li><strong>Entities:</strong> Only known entities that have entered 601 are Nomads.</li>
-        <li><strong>Environment:</strong> </li>
       </ul>
     </section>
 
@@ -72,7 +69,7 @@
   </div>
 
   <div class="image-column">
-    <img src="../assets/images/level 1.png" alt="Level 1 Image" class="level-image"/>
+    <img src="../assets/images/the_end.png" alt="Level 601 Image" class="level-image"/>
   </div>
 </main>
 
