added hallways link in levels.html

--- a/levels.html
+++ b/levels.html
@@ -41,7 +41,7 @@
               <li><a href="404.html">Level-0.3A | "Decrement Abnormality (Upper)"</a></li> 
               <li><a href="404.html">Level-0.3B | "Decrement Abnormality (Lower)"</a></li> 
               <li><a href="404.html">Level-0.4 | "Sandusky"</a></li>
-              <li><a href="404.html">Level-H | "Hallways"</a></li>
+              <li><a href="levels/hallways.html">Level-H | "Hallways"</a></li>
             </ul>
           </li>
           <li>
