--- a/levels/hallways.html
+++ b/levels/hallways.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hallways - Limbo HUB</title>
+  <title>Level H - Hallways</title>
   <link rel="stylesheet" href="../styles/main.css" />
 </head>
 <body>
@@ -27,13 +27,13 @@
 
     <main class="level-page">
       <div class="text-column">
-        <h2>Sub-Level H - "Hallways"</h2>
+        <h2>Level H - "Hallways"</h2>
         <p class="survival-class"><strong>Survival Difficulty:</strong> Class 2 — Safe | Moderate Resources | Minimal Entity Presence</p>
 
         <section>
           <h3>Description</h3>
           <p>
-            Sub-Level H, also referred to as <em>"Hallways"</em>, is a space consisting of seemingly infinite (but limited) narrow corridors. The design is simpler and more repetitive than Level 0, with plain walls and minimal decorations. The lighting is consistent, though dimmer than the harsh fluorescent glow of Level 0.
+            Level H, also referred to as <em>"Hallways"</em>, is a space consisting of seemingly infinite (but limited) narrow corridors. The design is simpler and more repetitive than Level 0, with plain walls and minimal decorations. The lighting is consistent, though dimmer than the harsh fluorescent glow of Level 0.
           </p>
           <p>
             The hallways stretch in every direction with occasional branching paths. Some areas have no lighting.
@@ -61,7 +61,7 @@
         <section>
           <h3>Additional Notes</h3>
           <p>
-            Sub-Level H is a relatively safe area ideal for scavenging and regrouping. However, caution should still be exercised when interacting with other survivors.
+            Level H is a relatively safe area ideal for scavenging and regrouping. However, caution should still be exercised when interacting with other survivors.
           </p>
           <p>
             Do not attempt to cross or explore the other side of the level beyond the void — it is currently considered impossible and will lead to certain death.
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+
