--- a/levels.html
+++ b/levels.html
@@ -70,7 +70,7 @@
               <li><a href="404.html">Level-⟁.? | Pillar Level</a></li>
             </ul>
           <li><a href="levels/abyss.html">Level-❖ | "Brick/Abyss"</a></li>
-          <li><a href="404.html">Level-???.1 | "Olympus"</a></li>
+          <li><a href="levels/olympus.html">Level-???.1 | "Olympus"</a></li>
         </ul>
       </div>
     </main>
