--- a/entities.html
+++ b/entities.html
@@ -88,7 +88,7 @@
           <li><a href="404.html">005-A | Whistleblower</a></li>
           <li><a href="404.html">005-B | Doomsday Lamp</a></li>
           <li><a href="404.html">005-C | Lurker</a></li>
-          <li><a href="404.html">005-D | White angel</a></li>
+          <li><a href="entities/whiteangel.html">005-D | White angel</a></li>
           <li><a href="404.html">005-E | Watchmen</a></li>
         </ul>
       </div>
